--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0B1F37</color>
-    <color name="colorPrimaryDark">#0B1F37</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#010616</color>
+    <color name="colorPrimaryDark">#010616</color>
+    <color name="colorAccent">#010616</color>
+
+    <color name="webViewDark">#0B1F37</color>
 </resources>
